samples/_failures_safe/1761371408_cd06c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3cfa971b.c: In function ‘main’:
./samples/SAFE/__tmp_3cfa971b.c:154:17: error: expected declaration or statement at end of input
  154 |                 }
      |                 ^
./samples/SAFE/__tmp_3cfa971b.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3cfa971b.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3cfa971b.c:154:17: error: expected declaration or statement at end of input
